# DocTextExtract

./: .gitignore  README.md  pyproject.toml
document_parser/: parser_manager.py  parsers.py
tests/: __init__.py
tests/test_files/: cp1251.html  special_chars.html  test.djvu  test.doc  test.docx  test.html
